# project

./: .gitmodules  CMakeLists.txt  Makefile  MiniEngine
.cache/clangd/index/: Block.cpp.AEDF5DC7B9E01B93.idx  Block.h.D3AC94AA8273F721.idx  Camera.cpp.C054208FE5C9B71B.idx  Camera.h.65C8809834E89697.idx  Chunk.cpp.2FE5FB8B5C16F5E5.idx  Chunk.h.CD963E7A5518E22E.idx  Shader.cpp.B764EF96BA36FF3B.idx  Shader.h.B2DBF886757D222D.idx  Texture.cpp.42124DC4A5DB0B0D.idx  Texture.h.514D9A98D5609530.idx  Window.cpp.5691F1ADA0D9594E.idx  Window.h.1414D8570B105EA3.idx  _fixes.hpp.FCEC42A046DB41EC.idx  _vectorize.hpp.F58B169A51972010.idx  common.hpp.9E79369DA4F7A40B.idx  compute_common.hpp.5B1B1E8F5EE33FBB.idx  compute_vector_decl.hpp.67AEE2A7915F7A5F.idx  compute_vector_relational.hpp.14726F70C78F6903.idx  constants.hpp.380D9AFA84CD58B3.idx  constants.inl.3A2F9D678F162139.idx  context.c.7F78A82AC5675D07.idx  dual_quaternion.hpp.71273372265E85EF.idx  dual_quaternion.inl.4D8360187A0134CF.idx  egl_context.c.61D4A809A51BCB95.idx  epsilon.hpp.96F5032A294E8449.idx  epsilon.inl.25F1AF74DA0D400A.idx  exponential.hpp.4CEBCEB92772505D.idx  func_common.inl.E76EF7A1E1E9E5D8.idx  func_exponential.inl.F59683109F148ADC.idx  func_geometric.inl.FB4E840C15F9F9DB.idx  func_integer.inl.AA10B7033513DCFC.idx  func_matrix.inl.C3D59340A3CA154E.idx  (+210 more)
include/engine/: Camera.h  Shader.h  Texture.h  Window.h
include/structures/: Block.h  Chunk.h
resources/shaders/: vertexshader
shaders/: fragmentshader
src/: Block.cpp  Camera.cpp  Chunk.cpp  Shader.cpp  Texture.cpp  Window.cpp  main.cpp
